--- a/TaskAgile/front-end/package.json
+++ b/TaskAgile/front-end/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
     "geckodriver": "^1.19.1",
+    "http-proxy-middleware": "^1.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
