--- a/TaskAgile/front-end/package.json
+++ b/TaskAgile/front-end/package.json
@@ -11,6 +11,7 @@
     "test": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "jquery": "^3.4.1",
@@ -28,7 +29,7 @@
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-standard": "^5.1.0",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
     "chromedriver": "79",
     "eslint": "^6.7.2",
@@ -39,6 +40,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "geckodriver": "^1.19.1",
     "http-proxy-middleware": "^1.0.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
