--- a/TaskAgile/src/main/resources/application.properties
+++ b/TaskAgile/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Abcd123@!
+#123456
 spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Abcd123@!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
