--- a/TaskAgile/src/main/resources/application.properties
+++ b/TaskAgile/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Abcd123@!
 #123456
+logging.level.com.taskagile=DEBUG
 spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Abcd123@!
