--- a/TaskAgile/pom.xml
+++ b/TaskAgile/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>spring-boot-test-autoconfigure</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
