--- a/TaskAgile/src/main/resources/application.properties
+++ b/TaskAgile/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Abcd123@!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
