--- a/TaskAgile/src/main/resources/application.properties
+++ b/TaskAgile/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+logging.level.org.springframework.security=DEBUG
