--- a/TaskAgile/src/main/resources/application.properties
+++ b/TaskAgile/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 #Abcd123@!
 #123456
 logging.level.com.taskagile=DEBUG
+
 spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Abcd123@!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.org.springframework.security=DEBUG
+
+spring.freemarker.template-loader-path=classpath:/mail-templates/
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
+app.mail-from=noreply@taskagile.com
