--- a/TaskAgile/front-end/package.json
+++ b/TaskAgile/front-end/package.json
@@ -8,7 +8,8 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "test": "npm run test:unit && npm run test:e2e"
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:integration": "vue-cli-service test:e2e --url http://localhost:8080/"
   },
   "dependencies": {
     "axios": "^0.19.2",
