--- a/TaskAgile/pom.xml
+++ b/TaskAgile/pom.xml
@@ -123,7 +123,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-
+				<configuration>
+					<wait>1000</wait>
+					<maxAttempts>180</maxAttempts>
+				</configuration>
 				<executions>
 					<execution>
 						<id>pre integration test</id>
@@ -200,7 +203,7 @@
 							<executable>npm</executable>
 							<arguments>
 								<argument>run</argument>
-								<argument>test:e2e</argument>
+								<argument>test:integration</argument>
 							</arguments>
 						</configuration>
 					</execution>
